Fixed spacing issue

--- a/src/blocks/gallery-masonry/styles/style.scss
+++ b/src/blocks/gallery-masonry/styles/style.scss
@@ -57,3 +57,9 @@
   .alignfull.wp-block-responsive-block-editor-addons-gallery-masonry {
   max-width: 100vw !important;
 }
+
+.rbea-gallery-masonry-slider-control-container {
+  .responsive-size-type-field-tabs {
+    margin-bottom: 0px;
+  }
+}
